# near-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: go_lint.yml  go_test.yml  rust.yml
PoC/minimal-sp-io-environment/: Cargo.toml  README.md
PoC/minimal-sp-io-environment/src/: main.rs  runtime.rs
batch-merkle-proofs/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: relayer.rs  relayer_and_lite_client.rs  relayer_and_lite_validate_receipt.rs  relayer_and_lite_validate_tx  relayer_and_lite_validate_tx.rs  simple.rs
near-ibc/: Cargo.toml
near-ibc/src/: client.rs  header.rs  lib.rs
near-lite-client/: .rust-toolchain.toml  Cargo.toml
near-lite-client/src/: block_validation.rs  checkpoint.rs  client.rs  error.rs  header.rs  lib.rs  merkle_tree.rs  signature.rs  storage.rs  test_utils.rs  types.rs  verifier.rs
near-lite-relayer/: Cargo.toml
near-lite-relayer-go/: Makefile  go.mod  go.sum
near-lite-relayer-go/blockchain_connector/: blockchain_connector.go  blockchain_connector_test.go
near-lite-relayer-go/client/: client.go  client_test.go
near-lite-relayer-go/connector/: blockchain_connector.go  blockchain_connector_test.go
near-lite-relayer-go/lite_client/: lite_client.go  lite_client_test.go
near-lite-relayer-go/types/: conversion.go  conversion_test.go  serde_test.go  serialization_test.go  types.go
near-lite-relayer/src/: blockchain_connector.rs  client_block.rs  client_proof.rs  lib.rs  state.rs
near-merkle-proofs/: Cargo.toml
near-merkle-proofs/src/: host_functions.rs  lib.rs  nibble.rs  state_proof.rs
near-primitives-wasm/: Cargo.toml
near-primitives-wasm-friendly/: Cargo.toml
near-primitives-wasm-friendly/src/: host_functions.rs  lib.rs
near-primitives-wasm/src/: host_functions.rs  lib.rs
proto/ibc/lightclients/near/v1/: near.proto
