[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
borsh = "0.9.3"
env_logger = "0.9.0"
log = "0.4.16"
near-primitives = "0.12"
near-lite-client = {path = "../near-lite-client"}
near-primitives-wasm = {path = "../near-primitives-wasm"}
near-lite-relayer = {path = "../near-lite-relayer"}
tokio = { version = "1.17.0", features = ["full"] }
sha2 = { version = "0.10.2"}

# tendermint
tendermint = { git = "https://github.com/blasrodri/tendermint-rs", rev = "8048e4de023cef94b59f3d526e24d612a88dd27b"}
