[package]
name = "near-ibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc = { git = "https://github.com/ComposableFi/ibc-rs.git", branch = "david/beefy-light-client", default-features = false }
ibc-proto = { git = "https://github.com/ComposableFi/ibc-rs.git", branch = "david/beefy-light-client", default-features = false }
near-lite-client = {path = "../near-lite-client", default-features = false}
