[package]
name = "near-lite-client"
authors = ["Composable Developers"]
version = "0.1.0"
edition = "2021"
homepage = "https://composable.finance"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = {version = "0.9.3", default-features = false }
thiserror = {version = "1.0.30", default-features = false }
sp-core = "6.0.0"
sp-io = "6.0.0"
sp-std = "4.0.0"

[dev-dependencies]
bs58 = "0.4.0"
log = "0.4.16"
sha2 = "0.10.2"
near-primitives = "0.12"
serde = "1.0.136"
near-crypto = "0.12.0"
serde_json = "1.0.79"
