[package]
name = "near-lite-client"
authors = ["Composable Developers"]
version = "0.1.0"
edition = "2021"
homepage = "https://composable.finance"


[dependencies]
borsh = { version = "0.9.3", default-features = false }
ibc = {version = "0.13.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
tendermint = { version = "0.23.5", default-features = false }

[dev-dependencies]
bs58 = "0.4.0"
log = "0.4.16"
sha2 = "0.10.2"
near-primitives = "0.12"
serde = "1.0.136"
near-crypto = "0.12.0"
serde_json = "1.0.79"


[features]
default = ["std"]
std = [
    "borsh/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
]
