[package]
name = "near-lite-client"
authors = ["Composable Developers"]
version = "0.1.0"
edition = "2021"
homepage = "https://composable.finance"


[dependencies]
borsh = { version = "0.9.3", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
near-primitives-wasm = {path = "../near-primitives-wasm", default-features = false}
near-merkle-proofs = { path = "../near-merkle-proofs", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
derive_more = { version = "0.99.1", default-features = false, features = ["display", "from"] }

[dev-dependencies]
bs58 = "0.4.0"
log = "0.4.16"
near-primitives = "0.12"
serde = "1.0.136"
near-crypto = "0.12.0"
serde_json = "1.0.79"


[features]
default = ["std"]
std = [
    "borsh/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
]