[package]
name = "near-lite-relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
log = "0.4.16"
near-crypto = { git = "https://github.com/ComposableFi/nearcore", rev = "cd6d0bfc6127dd54483b9a90d0018457d738bcee", package = "near-crypto"}
near-primitives = { git = "https://github.com/ComposableFi/nearcore", rev = "cd6d0bfc6127dd54483b9a90d0018457d738bcee", package = "near-primitives"}
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "master"}
serde = { version = "1", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1"
sha2 = "0.10.2"
ureq = {version = "2.4.0", features = ["json"] }

[dev-dependencies]
bs58 = "0.4.0"
