[package]
name = "near-merkle-proofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = {version = "0.9.3", default_features = false }
near-primitives = { git = "https://github.com/ComposableFi/nearcore", rev = "cd6d0bfc6127dd54483b9a90d0018457d738bcee", package = "near-primitives"}
no-std-compat = {version = "0.4.1", features = [ "alloc", "compat_hash" ] }
elastic-array = "0.11"
core2 = {version = "0.3.2" }
byteorder = {vesion = "1.4.3"}

[dev-dependencies]
sha2 = "0.10.2"
hex = "0.4"