[package]
name = "near-merkle-proofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = {version = "0.9.3", default_features = false }
no-std-compat = {version = "0.4.1", features = [ "alloc", "compat_hash" ], default-features = false }
elastic-array = {version = "0.11", default-features = false }
core2 = {version = "0.3.2", default-features = false }

near-primitives-wasm = {path = "../near-primitives-wasm", default-features = false }

[dev-dependencies]
sha2 = "0.10.2"
hex = "0.4"
near-primitives-wasm = {path = "../near-primitives-wasm"}
near-primitives = "0.14"