[package]
name = "near-primitives-wasm-friendly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "0.9.3", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }


[dev-dependencies]
bs58 = "0.4.0"
sha2 = "0.10.2"
near-primitives = "0.12"
serde = "1.0.136"
near-crypto = "0.12.0"
serde_json = "1.0.79"

[features]
default = ["std"]
std = [
    "borsh/std",
    "sp-std/std",
    "sp-core/std",
]
