[package]
name = "near-primitives-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "0.9.3", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sha2 = {version = "0.10.2", default-features = false }
tendermint = { git = "https://github.com/blasrodri/tendermint-rs", rev = "8048e4de023cef94b59f3d526e24d612a88dd27b"}
k256 = { version = "0.11", default-features = false, features = ["ecdsa", "sha256"] }
digest = { version = "0.10", default-features = false }
signature = { version = "1", default-features = false }
ed25519 = { version = "1.3", default-features = false }




[dev-dependencies]
bs58 = "0.4.0"
near-primitives = "0.12"
serde = "1.0.136"
near-crypto = "0.12.0"
serde_json = "1.0.79"

[features]
default = ["std"]
std = [
    "borsh/std",
    "sp-io/std",
    "sp-core/std",
]
